# Excel-MCP

./: README.md  pyproject.toml
src/excel-mcp/: main.py  server.py
