[project]
name = "excel-mcp"
version = "0.1.0"
description = "MCP server for Excel analysis and automation"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Aishwarya Sharma"}
]

license = {text = "MIT"}

dependencies = [
    "mcp>=1.2.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "duckdb>=1.5.1"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[project.scripts]
excel-mcp = "excel_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

