[project]
name = "excel-mcp"
version = "0.1.0"
description = "MCP server for Excel analysis and automation"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Aishwarya Sharma"}
]

license = {text = "MIT"}

dependencies = [
    "mcp",
    "pandas",
    "openpyxl",
    "duckdb>=1.5.1",
    "pyarrow>=23.0.1",
    "polars>=1.39.3",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "xlwt>=1.3.0",
]

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
excel-mcp = "excel_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

